# ai-assistant

./: .gitignore  README.md  example_usage.py  pyproject.toml  start.py
src/: main.py
src/agents/: __init__.py  multi_agent_orchestrator.py  query_analysis_agent.py  research_agent.py  researcher_agent.py  search_agent.py  security_agent.py  summary_agent.py
src/api/: main.py
src/config/: __init__.py  settings.py
src/di/: fabric.py
src/models/: schemas.py
src/services/: hitl_service.py  llm_service.py
src/tools/: arxiv_tool.py  paper_analyzer.py  paper_analyzer_tool.py  web_search_tool.py
src/vectorstore/: faiss_store.py
tests/: agent_runner.py  hitl_example.py  test_endpoint.py  test_multi_agent_system.py  test_security_agent.py
